--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "formidable": "^1.1.1",
     "gm": "^1.23.1",
     "mongodb": "^3.0.2",
-    "mongoose": "^5.0.3"
+    "mongoose": "^5.0.3",
+    "supervisor": "^0.12.0"
   }
 }
